Instala Firebase en la aplicación.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,3 +28,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
+
+// Para agregar a Firebase
+apply plugin: 'com.google.gms.google-services'
